--- a/Owls/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/Owls/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -101,7 +101,7 @@
                                 </g>
                             </g>
                         </svg>
-                    </div>
+                    </div>  
                     <span class="nav-link-text ms-1">Khác</span>
                 </a>
             </li>
@@ -158,6 +158,6 @@
     </div>
     <div class="sidenav-footer mx-3 ">
        
-        <a class="btn bg-gradient-dark mt-4 w-100" href="" type="button">Đăng xuất</a>
+        <a class="btn bg-gradient-dark mt-4 w-100" href="/Auth/Logout" type="button">Đăng xuất</a>
     </div>
 </aside>
