--- a/Owls/Views/Shared/Navbar.cshtml
+++ b/Owls/Views/Shared/Navbar.cshtml
@@ -3,7 +3,7 @@
         <div class="row">
             <a class="col-xl-3 col-lg-2 d-flex justify-content-end align-items-center" href="@Url.Action("Index", "Home")">
                 <div class="header__logo ">
-                        <img src="/image/lg.png" alt="" height="50">
+                        <img src="/image/logo.png" alt="" height="50">
                 </div>
             </a>
 
@@ -21,7 +21,7 @@
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "shirts" })">Shirts</a></li>
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "sweaters-cardigans" })">Sweaters & Cardigans</a></li>
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "sweatshirts-hoodies" })">Sweatshirts & Hoodies</a></li>
-                                        <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "outwear" })">Outwear</a></li>
+                                        <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "outerwear" })">Outwear</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -61,7 +61,7 @@
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "shirts" })">Shirts</a></li>
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "sweaters-cardigans" })">Sweaters & Cardigans</a></li>
                                         <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "sweatshirts-hoodies" })">Sweatshirts & Hoodies</a></li>
-                                        <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "outwear" })">Outwear</a></li>
+                                        <li><a href="@Url.Action("ProductsFilterByCategory", "Products", new { query = "outerwear" })">Outwear</a></li>
                                     </ul>
                                 </li>
                                 <li>
