--- a/Owls/Areas/Admin/Views/Orders/Details.cshtml
+++ b/Owls/Areas/Admin/Views/Orders/Details.cshtml
@@ -55,7 +55,27 @@
                                     <h6 class="mb-0"><b>@Money.Cast((int)total)</b></h6>
                                 </div>
                             </div>
+                            <div class=" w-100">
+                                <hr />
+                            </div>
 
+                                <div class="row w-100">
+                                <div class="col-6">
+                                    <h6 class="mb-0 text-nowrap"><b>Phương thức </b></h6>
+
+                                </div>
+                                <div class="col-6 text-end">
+                                    @if(Model.PaymentMethod == "COD")
+                                    {
+                                        <h6 class="mb-0"><b>COD</b></h6>
+                                    }
+                                    else
+                                    {
+                                    <h6 class="mb-0"><b>Ngân hàng</b></h6>
+
+                                    }
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-7 mb-md-0 mb-4">
@@ -109,7 +129,7 @@
                 </div>
             <div class="card-body p-3 pb-0">
                 <ul class="list-group">
-                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
                         <div class="d-flex flex-column">
                         <h6 class=" text-dark font-weight-bold text-sm">Tạo lúc:</h6>
                         </div>
@@ -117,7 +137,7 @@
                                 <h6 class=" text-dark font-weight-bold text-sm">@Model.CreateAt </h6>
                         </div>
                     </li>
-                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
                         <div class="d-flex flex-column">
                             <h6 class=" text-dark font-weight-bold text-sm">Cập nhật lúc :</h6>
                         </div>
@@ -125,14 +145,25 @@
                             <h6 class=" text-dark font-weight-bold text-sm"> @Model.UpdateAt </h6>
                         </div>
                     </li>
-                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                    <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
                         <div class="d-flex flex-column justify-content-end">
                             <h6 class=" text-dark font-weight-bold text-sm">Trạng thái</h6>
                         </div>
                         <div class="d-flex flex-column">
-                              <select class="form-control text-center" style="width:150px" asp-for="Status" asp-items="(SelectList)ViewBag.Status"></select>                       
-                        </div>
+                                <select class="form-control text-center" id="statusSelect" style="width:150px" asp-for="Status" asp-items="(SelectList)ViewBag.Status"></select>
+                            </div>
                     </li>
+                        <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
+                            <div class="d-flex flex-column">
+                                <h6 class=" text-dark font-weight-bold text-sm">Thanh toán :</h6>
+                            </div>
+                            <div class="d-flex flex-column">
+                                <label class="switch checkbox" style="max-width:60px">
+                                    <input type="checkbox" asp-for="IsPaid" id="dataActive" value="@Model.IsPaid" />
+                                    <span class="slider round" id="btnSetActive"></span>
+                                </label>
+                            </div>
+                        </li>
                 </ul>
             </div>
         </form>
@@ -169,3 +200,37 @@
         </div>
     </div>
 </div>
+<script src="/js/jquery-3.3.1.min.js?v=FgpCb_KJQlLNfOu91ta32o_NMZxltwRo8QtmkMRdAu8"></script>
+<script>
+    $('#btnSetActive').click(function () {
+        var va = $('#dataActive').val();
+        if (va === "true") {
+            $('#dataActive').val("false");
+
+        } else {
+            $('#dataActive').val("true");
+        }
+    });
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var statusSelect = document.getElementById('statusSelect');
+        var isPaidCheckbox = document.getElementById('dataActive');
+
+        function updateIsPaidCheckbox() {
+            if (statusSelect.value === 'Đã giao hàng') {
+                $('#dataActive').val("true");
+                isPaidCheckbox.checked = true;
+
+            } else {
+                $('#dataActive').val("false");
+                isPaidCheckbox.checked = false;
+
+            }
+        }
+
+        statusSelect.addEventListener('change', function () {
+            updateIsPaidCheckbox();
+        });
+    });
+</script>
