--- a/Owls/Pages/Shared/Components/ItemProductOrder.razor
+++ b/Owls/Pages/Shared/Components/ItemProductOrder.razor
@@ -5,7 +5,7 @@
     @if (string.IsNullOrEmpty(image))
     {
         <div class="w-10">
-            <div class="spinner-grow" role="status">
+            <div class="spinner-border" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
