--- a/Owls/Views/Products/Details.cshtml
+++ b/Owls/Views/Products/Details.cshtml
@@ -55,19 +55,9 @@
                        
                         <div class="tab-pane" id="tabs-2" role="tabpanel">
                             <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut loret fugit, sed
-                                quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt loret.
-                                Neque porro lorem quisquam est, qui dolorem ipsum quia dolor si. Nemo enim ipsam
-                                voluptatem quia voluptas sit aspernatur aut odit aut loret fugit, sed quia ipsu
-                                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nulla
-                                consequat massa quis enim.
+                                Hiện chưa có đánh giá
                             </p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                                dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                                nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
-                                quis, sem.
-                            </p>
+                            
                         </div>
                     </div>
                 </div>
@@ -79,7 +69,7 @@
 
 
 <partial name="Modal"/>
-
+<vc:recommend/>
 
 <script>
     var pro_descr = @Html.Raw(Json.Serialize(Model.Description));
