--- a/Owls/Areas/Admin/Views/Products/Index.cshtml
+++ b/Owls/Areas/Admin/Views/Products/Index.cshtml
@@ -40,7 +40,7 @@
                                 <th class="text-secondary opacity-7"></th>
                             </tr>
                         </thead>
-                        @await Html.PartialAsync("_Product", Model)
+                        <partial name="_Product" model="Model"/>
                     </table>
                 </div>
             </div>
