--- a/Owls/Pages/Customer/Profile.razor
+++ b/Owls/Pages/Customer/Profile.razor
@@ -3,6 +3,11 @@
 @inject UserManager<OwlsUser> UserManager
 @inject HttpContextAccessor HttpContextAccess
 @inject IToastService toastsv
+
+
+<Title PageTitle="- Tài khoản" />
+
+
 <link href="css/profile.css" rel="stylesheet" />
 
 <div class="mx-auto" style="padding:0 4rem">
