--- a/Owls/Areas/Admin/Views/Orders/_OrderItem.cshtml
+++ b/Owls/Areas/Admin/Views/Orders/_OrderItem.cshtml
@@ -16,6 +16,11 @@
             </div>
             <div class="d-flex flex-column justify-content-center">
                 <h6 class="mb-0 text-sm">@Model.ProductVariant.Product.Name</h6>
+                @if(Model.Discount.HasValue && Model.Discount.Value > 0)
+                {
+                     <h6 class="mb-0 text-sm">Giảm : @Model.Discount %</h6>
+                }
+
             </div>
         </div>
     </td>
@@ -38,6 +43,10 @@
         <span class="text-secondary text-xs font-weight-bold">@Money.Cast((int)Model.ProductVariant.Cost)</span>
     </td>
     <td class="align-middle text-center">
-        <span class="text-secondary text-xs font-weight-bold">@Money.Cast((int)Model.Price)</span>
+        @{
+            var discount = Model.Discount.HasValue ? Model.Discount.Value : 0;
+            var price = Model.Price * (1 - discount / 100);
+        }
+        <span class="text-secondary text-xs font-weight-bold">@Money.Cast((int)price)</span>
     </td>
 </tr>
