--- a/Owls/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Owls/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="76x76" href="~/image/owls-favicon-color.png">
-    <link rel="icon" type="image/png" href="~/image/owls-favicon-color.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="~/image/icon.png">
+    <link rel="icon" type="image/png" href="~/image/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
     <title>
@@ -45,7 +45,6 @@
             Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
         }
     </script>
-    <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script asp-append-version="true" src="~/js/soft-ui-dashboard.min.js?v=1.0.3"></script>
     <partial name="_ValidationScriptsPartial.cshtml"/>
