--- a/Owls/Pages/Payment/HandleCallBack.razor
+++ b/Owls/Pages/Payment/HandleCallBack.razor
@@ -4,6 +4,9 @@
 @inject IOrderRepos OrderRepos
 @inject NavigationManager Navigate
 
+
+<Title PageTitle="- Xử lý thanh toán" />
+
 <div class="d-flex flex-column justify-content-center align-items-center gap-2">
     <div class="spinner-border" role="status">
         <span class="sr-only">Xử lý thanh toán</span>
