--- a/Owls/Views/Cart/Index.cshtml
+++ b/Owls/Views/Cart/Index.cshtml
@@ -30,7 +30,7 @@
                             {
                                 <tr id="row-@item.Sku">
                                         <td class="cart__product__item" onclick="Details('@item.ProductName')">
-                                        <img src="@item.Image" alt="" width="150">
+                                        <img src="@item.Image" alt="" width="100" height="100">
                                         <div class="cart__product__item__title">
                                             <h6>@item.ProductName</h6>
                                             <div class="rating">
@@ -46,8 +46,25 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="cart__price">@Money.Cast((int)item.Price)</td>
-                                    <td id="price-@item.Sku" style="display:none">@item.Price</td>
+                                    <td class="cart__price">
+                                         <h5 style="color: #535C91; font-size: 16px; font-weight: 600;">
+                                                @{
+                                                    var price = item.Price * (1 - item.Discount / 100);
+                                                }
+
+                                                @price.Value.ToString("#,###") đ
+                                        </h5>
+                                            @if(item.Discount > 0)
+                                            {
+                                                <h6 class="text-decoration-line-through text-black-50 ">
+                                                    @Money.Cast((int)item.Price)
+                                                </h6>
+                                            }
+                                           
+                                        </td>
+                                    <td id="price-@item.Sku" style="display:none">
+                                            @price
+                                        </td>
                                     <td class="cart__quantity">
                                         <div class="pro-qtty">
                                             <span class="qtty-desc" onclick="updateQuantity('@item.Sku',@item.StockQuantity,-1)" >-</span>
@@ -60,7 +77,7 @@
                                     </td>
                                     <td class="cart__total" id="cart-total-@item.Sku">
                                         @{
-                                            var total = item.Price * item.Quantity;
+                                            var total = item.Price*(1-item.Discount/100) * item.Quantity;
                                         }
                                         @Money.Cast((int)total)
                                     </td>
