--- a/Owls/Views/Products/Details.cshtml
+++ b/Owls/Views/Products/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Owls.DTOs.ProductReadVM
-
 <section class="product-details spad">
     <div class="container">
         <div class="row">
@@ -40,9 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab">Mô tả</a>
                         </li>
-                        <li class="nav-item">
+                      @*   <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">Đánh giá</a>
-                        </li>
+                        </li> *@
                        
                     </ul>
                     <div class="tab-content">
