--- a/Owls/_Imports.razor
+++ b/Owls/_Imports.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.JSInterop
 
 @using Owls.Helper
 @using Owls.Models
@@ -11,6 +12,7 @@
 @using Owls.Pages.Shared.Components
 @using Owls.Views.Shared
 @using Owls.Services.Firebase
+
 
 
 @using Blazored.Toast
