--- a/Owls/Areas/Admin/Views/Orders/Index.cshtml
+++ b/Owls/Areas/Admin/Views/Orders/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="card mb-4">
             <div class="card-header pb-0">
                 <h5 class="w-20">Đơn hàng</h5>
-                <div class="row">
+                <div class="row w-100">
                     <form class="col-12 col-lg-7" asp-action="Index" asp-area="Admin" asp-controller="Orders">
                         <div class="row">
                             <div class="col-1">
@@ -30,8 +30,11 @@
 
                     </form>
                     <div class="col-12 col-lg-5">
-                        <form asp-action="Search" asp-area="Admin" asp-controller="Orders" method="get">
-                            <input type="text" id="searchInput" name="orderId" value="@ViewBag.SearchString" placeholder="Mã đơn hàng...">
+                        <form class="d-flex gap-2"
+                            asp-action="Index" 
+                            asp-area="Admin" asp-controller="Orders" method="get">
+                            <input class="w-100" type="text" id="searchInput" name="search" value="@ViewBag.SearchString"
+                            placeholder="Mã đơn hoặc Tên hoặc SĐT">
                             <button class="btn btn-outline-primary btn-sm mb-0 " id="filterButton" type="submit">Tìm</button>
                         </form>
 
@@ -68,6 +71,7 @@
          page-class="page-index"
          page-from="@ViewBag.From"
          page-to="@ViewBag.To"
+         page-search="@ViewBag.Search"
          page-class-selected="active" class="pagination justify-content-center" id="client-pager">
     </div>
 </nav> 
