--- a/Owls/Views/Home/About.cshtml
+++ b/Owls/Views/Home/About.cshtml
@@ -1,5 +1,75 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h1 class="display-4 mb-4">Giới Thiệu</h1>
+            <p class="lead mb-5">Chào mừng đến với website bán quần áo và phụ kiện của chúng tôi. Chúng tôi là đội ngũ sinh viên thực hiện dự án này dưới sự hướng dẫn của Ths. Nguyễn Thanh Vũ.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="/image/logo.png" class="img-fluid " alt="About Us">
+        </div>
+        <div class="col-md-6">
+            <h2 class="mt-3">Về Chúng Tôi</h2>
+            <p>Chúng tôi là đội ngũ sinh viên năng động và sáng tạo, luôn nỗ lực để mang đến cho khách hàng những sản phẩm chất lượng và dịch vụ tốt nhất.</p>
+            <h3 class="mt-4">Đội ngũ của chúng tôi:</h3>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Khổng Triệu Hà Vy - 21DH113416</li>
+                <li class="list-group-item">Lê Ngọc Tùng - 21DH114565</li>
+                <li class="list-group-item">Đinh Quang Khánh - 21DH113759</li>
+                <li class="list-group-item">Lường Thị Thảo Nhung - 21DH114478</li>
+                <li class="list-group-item">Đinh Thị Minh Thư - 21DH114528</li>
+            </ul>
+            <p class="lead mt-4">Chúng tôi cam kết mang đến cho bạn những sản phẩm chất lượng và dịch vụ tốt nhất.</p>
+        </div>
+    </div>
+</div>
+
+                <style>
+    .lead {
+        font-size: 1.25rem;
+    }
+
+    .display-4 {
+        font-weight: bold;
+    }
+
+    .list-group-item {
+        background-color: #f8f9fa;
+        border: 1px solid #dee2e6;
+    }
+
+    .img-fluid {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .rounded {
+        border-radius: 0.25rem;
+    }
+
+    .shadow {
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+
+    .mt-3 {
+        margin-top: 1rem;
+    }
+
+    .mt-4 {
+        margin-top: 1.5rem;
+    }
+
+    .mb-4 {
+        margin-bottom: 1.5rem;
+    }
+
+    .mb-5 {
+        margin-bottom: 3rem;
+    }
+
+    .my-5 {
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+    }
+</style>
